--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -84,6 +84,23 @@
                     <outputFileName>openapi.yaml</outputFileName>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.openapitools</groupId>
+                <artifactId>openapi-generator-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>post-integration-test</phase>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <inputSpec>${project.build.directory}/openapi.yaml</inputSpec>
+                            <generatorName>typescript-fetch</generatorName>
+                            <output>${project.build.directory}/openapi-generated-sources</output>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
