--- a/.github/workflows/publish-web-api.yml
+++ b/.github/workflows/publish-web-api.yml
@@ -13,7 +13,7 @@ on:
       message:
         description: 'commit message'
         required: true
-        default: 'update openapi.yaml'
+        default: 'generate web api'
 
 jobs:
   build:
