--- a/.github/workflows/publish-web-api.yml
+++ b/.github/workflows/publish-web-api.yml
@@ -24,6 +24,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build the stack
         run: docker-compose up -d
+
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
@@ -39,7 +40,7 @@ jobs:
           restore-keys: ${{ env.cache-name }}-
 
       - name: Verify project and generate openapi.yaml
-        run: mvn -B verify --file pom.xml -Drevision=${{github.event.inputs.revision}}
+        run: mvn -B verify --file pom.xml -Drevision=${{github.event.inputs.revision}} -Pintegration-test
 
       - name: Upload to GitHub
         uses: LasyIsLazy/github-upload-action@v0.0.2
